--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,20 @@ services:
     networks:
       - sagittarius-net
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.1
+    container_name: keycloak
+    command: start-dev
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_ENABLED: "true"
+      KC_HOSTNAME: localhost
+    ports:
+      - "8181:8080"
+    networks:
+      - sagittarius-net
+
 volumes:
   postgres_data:
 
